@@ -1,3 +1,9 @@
+2013-01-31  Hajime Morrita  <morrita@google.com>
+
+        Unreviewed, disabling failing test.
+
+        * tests/WebFrameTest.cpp:
+
 2013-01-31  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r141479.
